.metadata/.plugins/org.eclipse.cdt.ui/wefewf.build.log
23:11:42 **** Incremental Build of configuration Debug for project wefewf ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/ssd1306.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/ssd1306.d" -MT"Core/Src/ssd1306.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ssd1306.o"
arm-none-eabi-gcc "../Core/Src/ssd1306_fonts.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/ssd1306_fonts.d" -MT"Core/Src/ssd1306_fonts.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ssd1306_fonts.o"
arm-none-eabi-gcc "../Core/Src/ssd1306_tests.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F446xx -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/ssd1306_tests.d" -MT"Core/Src/ssd1306_tests.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/ssd1306_tests.o"
In file included from ../Core/Src/main.c:24:
../Core/Inc/ssd1306.h:104:8: error: unknown type name 'I2C_HandleTypeDef'
  104 | extern I2C_HandleTypeDef SSD1306_I2C_PORT;
      |        ^~~~~~~~~~~~~~~~~
In file included from ../Core/Src/ssd1306.c:1:
../Core/Inc/ssd1306.h:104:8: error: unknown type name 'I2C_HandleTypeDef'
  104 | extern I2C_HandleTypeDef SSD1306_I2C_PORT;
      |        ^~~~~~~~~~~~~~~~~
In file included from ../Core/Inc/ssd1306_fonts.h:4,
                 from ../Core/Src/ssd1306_fonts.c:2:
../Core/Inc/ssd1306.h:104:8: error: unknown type name 'I2C_HandleTypeDef'
  104 | extern I2C_HandleTypeDef SSD1306_I2C_PORT;
      |        ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/main.o] Error 1
make: *** Waiting for unfinished jobs....
make: *** [Core/Src/subdir.mk:43: Core/Src/ssd1306_fonts.o] Error 1
../Core/Src/ssd1306.c: In function 'ssd1306_WriteCommand':
../Core/Src/ssd1306.c:14:5: warning: implicit declaration of function 'HAL_I2C_Mem_Write' [-Wimplicit-function-declaration]
   14 |     HAL_I2C_Mem_Write(&SSD1306_I2C_PORT, SSD1306_I2C_ADDR, 0x00, 1, &byte, 1, HAL_MAX_DELAY);
      |     ^~~~~~~~~~~~~~~~~
In file included from ../Core/Src/ssd1306_tests.c:3:
../Core/Inc/ssd1306.h:104:8: error: unknown type name 'I2C_HandleTypeDef'
  104 | extern I2C_HandleTypeDef SSD1306_I2C_PORT;
      |        ^~~~~~~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:43: Core/Src/ssd1306.o] Error 1
make: *** [Core/Src/subdir.mk:43: Core/Src/ssd1306_tests.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

23:11:42 Build Failed. 9 errors, 1 warnings. (took 639ms)

